# LetUsCook

./: README.md  Recipe.cpp  Recipe.h  RecipeManager.cpp  RecipeManager.h  RecipeManagerApp  app.py  explore.html  index.html  login.html  main.cpp  recipe_scripts.js  recipes.html  register.html  requirements.txt  styles.css  view_recipes.html
backend/: CMakeLists.txt
backend/config/: db_config.json
backend/src/: Database.cpp  Database.h  Recipe.cpp  Recipe.h  RecipeManager.cpp  RecipeManager.h  User.h  UserManager.cpp  UserManager.h  bcrypt.cpp  bcrypt.h  jwt.cpp  jwt.h  main.cpp
frontend/: explore.html  index.html  login.html
